# docs/swagger.yaml
@@ -83,6 +83,12 @@ paths:
       summary: 获取用户信息
       tags:
       - 用户模块
+  /getusername:
+    get:
+      responses: {}
+      summary: 获取用户名的全部信息
+      tags:
+      - 用户模块
   /login:
     post:
       parameters:
